--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -372,7 +372,31 @@ padding-right: -40px;
 
 
 
+@media only screen and (max-width: 450px) {
 
+
+ 
+.tm-bg-dark-blue-small { background-color: #464757; 
+border: 1px solid #b6d7f0;
+width: 350px;
+	margin-left: -70px;
+
+}
+h2.about-title {	
+    font-size: 1.6em;
+    font-weight: 400;
+border-right: 1px solid #b6d7f0;
+border-left: 1px solid #b6d7f0;
+border-top: 1px solid #b6d7f0;
+color: #b6d7f0;
+background-color: #232338;
+	padding: 15px;
+		margin-left: -60px;
+text-shadow: 0px -1px 8px rgba(182, 215, 240, 0.7);
+
+
+}
+}
 
 
 
@@ -429,6 +453,17 @@ width: 500px;
 .space-left { 
 	margin-left: 40px;
 
+}
+
+.contact-header {
+	color: #b6d7f0;
+		background-color: #232338;
+border: 1px solid #b6d7f0;
+padding: 20px;
+
+	margin-left: -20px;
+
+margin-bottom: -40px;
 }
 .space-right { 
 	margin-left: -40px;
@@ -695,10 +730,8 @@ margin-bottom: 40px;
 		background-color: #232338;
 border: 1px solid #b6d7f0;
 padding: 20px;
-	margin-left: -20px;
 
 margin-bottom: -40px;
-
 }
 
 .tm-copyright-text {
@@ -757,7 +790,14 @@ width: 230px;
 margin-left: 130px;
 }
 
+.contact-header {
+	color: #b6d7f0;
+		background-color: #232338;
+border: 1px solid #b6d7f0;
+padding: 20px;
 
+
+}
 }
 
 @media only screen and (min-width: 720px) {
