--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -378,7 +378,7 @@ padding-right: -40px;
  
 .tm-bg-dark-blue-small { background-color: #464757; 
 border: 1px solid #b6d7f0;
-width: 350px;
+width: 200px;
 	margin-left: -70px;
 
 }
@@ -394,6 +394,22 @@ background-color: #232338;
 		margin-left: -60px;
 text-shadow: 0px -1px 8px rgba(182, 215, 240, 0.7);
 
+
+}
+
+.space-right { 
+
+	margin-left: -90px;
+
+}
+.space-left { 
+
+	margin-left: -90px;
+
+}
+.space-center { 
+
+	margin-left: -90px;
 
 }
 }
