--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ h2.gallery-title {
 border-right: 1px solid #b6d7f0;
 border-left: 1px solid #b6d7f0;
 border-top: 1px solid #b6d7f0;
-color: #b6d7f0;
+color: #a4bfeb;
 background-color: #232338;
 	padding: 30px;
  	margin-bottom: -2px;
@@ -482,7 +482,7 @@ text-shadow: 0px -1px 8px rgba(182, 215, 240, 0.7);
 border-right: 1px solid #b6d7f0;
 border-left: 1px solid #b6d7f0;
 border-top: 1px solid #b6d7f0;
-color: #b6d7f0;
+color: #a4bfeb;
 background-color: #232338;
 	padding: 30px;
 		padding-bottom: 50px;
@@ -549,7 +549,7 @@ color: #b6d7f0;
 border-right: 1px solid #b6d7f0;
 border-left: 1px solid #b6d7f0;
 border-top: 1px solid #b6d7f0;
-color: #b6d7f0;
+color: #a4bfeb;
 background-color: #232338;
 	padding: 15px;
   margin-inline: auto;
@@ -735,7 +735,7 @@ color: #b6d7f0;
 border-right: 1px solid #b6d7f0;
 border-left: 1px solid #b6d7f0;
 border-top: 1px solid #b6d7f0;
-color: #b6d7f0;
+color: #a4bfeb;
 background-color: #232338;
 	padding: 15px;
   margin-inline: auto;
